feat: Implement security setup and app selection flows
This commit introduces the core functionality for setting up security (PIN/Biometric) and selecting applications to be locked.

- Added `SecuritySetupActivity.kt` and `SecuritySetupScreen.kt` for users to set up a PIN.
- Implemented `AppSelectionActivity.kt` and `AppSelectionScreen.kt` to allow users to choose which applications to lock.
- Created `AuthenticationActivity.kt` and `AuthenticationScreen.kt` for biometric authentication.
- Added `AppInfo.kt` data class to represent application information.
- Updated `AppLockPrefs.kt` to manage saving and retrieving PIN and locked app preferences.
- Modified `MainActivity.kt` to orchestrate the initial setup flow (security setup then app selection).
- Added `BiometricUtils.kt` to check for biometric availability.
- Introduced `SecurityManager.kt` for managing security preferences (PIN).
- Added `AppRepository.kt` to retrieve a list of installed applications.
- Created `AppLockScreen.kt` (currently a placeholder for future lock screen UI).
- Added `AppMonitorService.kt` (initial structure, functionality to be implemented).
- Defined `LightColors.kt` and `PixelAppLockTheme.kt` for theming.
- Updated `AndroidManifest.xml` to include new activities, permissions (USE_BIOMETRIC, PACKAGE_USAGE_STATS), and queries for app discovery.
- Added biometric dependency in `app/build.gradle.kts`.
- Removed the old `AppSelectorScreen.kt` as its functionality is replaced by the new app selection flow.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.pixel.applock">
+    <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" tools:ignore="ProtectedPermissions" />
 
     <application
         android:allowBackup="true"
@@ -20,7 +22,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SecuritySetupActivity" />
+        <activity android:name=".ui.AppSelectionActivity" />
+
 
     </application>
+    <queries>
+        <!-- To query all apps with launcher intent -->
+        <intent>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent>
+
+        <!-- (Optional) To query specific packages you want -->
+        <!--
+        <package android:name="com.google.android.gm" />
+        <package android:name="com.android.vending" />
+        -->
+    </queries>
+
 
 </manifest>
